changes to week 6 assignments
