# routes/observation.js
@@ -1,22 +1,15 @@
 const express = require('express');
 const {
-    getObservations,
-    getSingleObservation,
-    createObservation,
-    updateObservation,
-    deleteObservation
-} = require('../controllers/observation')
+  getObservations,
+  getSingleObservation,
+  createObservation,
+  updateObservation,
+  deleteObservation
+} = require('../controllers/observation');
 const router = express.Router();
 
-router
-    .route('/')
-    .get(getObservations)
-    .post(createObservation);
+router.route('/').get(getObservations).post(createObservation);
 
-router
-    .route('/:id')
-    .get(getSingleObservation)
-    .put(updateObservation)
-    .delete(deleteObservation);
+router.route('/:username').get(getSingleObservation).put(updateObservation).delete(deleteObservation);
 
 module.exports = router;
