# routes/user.js
@@ -1,22 +1,9 @@
 const express = require('express');
-const {
-    getUsers,
-    getSingle,
-    createUser,
-    updateUser,
-    deleteUser
-} = require('../controllers/user')
+const { getUsers, getSingle, createUser, updateUser, deleteUser } = require('../controllers/user');
 const router = express.Router();
 
-router
-    .route('/')
-    .get(getUsers)
-    .post(createUser);
+router.route('/').get(getUsers).post(createUser);
 
-router
-    .route('/:id')
-    .get(getSingle)
-    .put(updateUser)
-    .delete(deleteUser);
+router.route('/:username').get(getSingle).put(updateUser).delete(deleteUser);
 
 module.exports = router;
